# QeMCMC

./: .bumpversion.toml  .gitignore  LICENSE  README.md  main.py  pyproject.toml  todo
.github/workflows/: docs.yaml
docs/: requirements.txt
docs/source/: api.md  authors.md  coarse-graining.md  conf.py  energy-model.md  example.md  getting-started.md  index.md  license.md
notebooks/: H_E_graphs.py  H_E_graphs_stu.py  test.ipynb  test.py  tutorial.ipynb
qemcmc/src/qemcmc/: ClassicalMCMC.py  main.py
src/QeMCMC/: CircuitMaker.py  Circuit_Maker.py  MCMC.py  ModelMaker.py  Model_Maker.py  QeMCMC.py  QeMCMC_.py  README.md  __init__.py  energy_models.py  helpers.py  todo
src/qemcmc/: CircuitMaker.py  CircuitMaker_old_qq.py  ClassicalMCMC.py  MCMC.py  ModelMaker.py  QeMCMC_.py  __init__.py  circuits.py  coarse_grain.py  energy_models.py  helpers.py  main.py  spectralgap.py
src/qemcmc/model/: __init__.py  energy_model.py
src/qemcmc/sampler/: __init__.py  classical_mcmc.py  mcmc.py  qe_mcmc.py
src/qemcmc/tests/: test_calculate_energy.py  test_classical_and_quantum.py  test_energy_models.py
src/qemcmc/utils/: __init__.py  helpers.py  model_maker.py
tests/: helpers_test.py  test.py
workflows/: ci.yml
