[project]
name = "qemcmc"
dynamic = ["version"]
description = "Quantum enhanced Markov Chain Monte Carlo sampler simulated using Qiskit and Qulacs."
readme = "README.md"
authors = [
    { name = "Stuart Ferguson"},
    { name = "Feroz Hassan"},
]
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pip>=25.3",
    "pytest>=9.0.2",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.2",
    "tqdm>=4.67.1",
]

[project.scripts]
qemcmc = "qemcmc:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "qemcmc.__version__" }
