[project]
name = "qemcmc"
version = "0.0.0"
description = "Quantum enhanced Markov Chain Monte Carlo sampler simulated using PennyLane"
readme = "README.md"
authors = [{ name = "Stuart Ferguson" }, { name = "Feroz Hassan" }]
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pennylane==0.44",
    "qiskit==2.2",
    "qiskit-aer>=0.17.0",
    #"qiskit-qulacs",
    #"qulacs>=0.6.12",
    "tqdm>=4.67.1",
]

[project.scripts]
qemcmc = "qemcmc:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
