[project]
name = "qemcmc"
version = "0.0.0"
description = "Quantum enhanced Markov Chain Monte Carlo sampler simulated using PennyLane"
readme = "README.md"
authors = [{ name = "Stuart Ferguson" }, { name = "Feroz Hassan" }]
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5,<2.4",   # numpy version 2.4 onwards seems to cause an issue with PennyLane 
    "pandas>=2.2.3",
    "pennylane==0.44",
    "qiskit==2.2",
    "qiskit-aer>=0.17.0",
    "tqdm>=4.67.1",
    "matplotlib-inline",
    "ipykernel",
    "iprogress",
    "spyder-kernels==2.4",
    "ipywidgets>=8.1.7",
]

[project.scripts]
qemcmc = "qemcmc:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
